--- a/0x05-Node_JS_basic/package.json
+++ b/0x05-Node_JS_basic/package.json
@@ -18,6 +18,7 @@
     "@babel/node": "^7.25.0",
     "@babel/preset-env": "^7.25.4",
     "chai-http": "^4.3.0",
+    "describe": "^1.2.0",
     "express": "^4.21.0",
     "http-server": "^14.1.1",
     "node-http": "^0.0.5"
