--- a/0x05-Node_JS_basic/.babelrc
+++ b/0x05-Node_JS_basic/.babelrc
@@ -1,3 +1,12 @@
 {
-    "presets": [["env", {"exclude": ["transform-regenerator"]}]]
+    "presets": [
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "node": "12.22.9"
+                }
+            }
+        ]
+    ]
 }
