--- a/0x05-Node_JS_basic/.babelrc
+++ b/0x05-Node_JS_basic/.babelrc
@@ -1,11 +1,11 @@
 {
     "presets": [
         [
-            "@babel/preset-env",
+            "env",
             {
-                "targets": {
-                    "node": "12.22.9"
-                }
+                "exclude": [
+                    "transform-regenerator"
+                ]
             }
         ]
     ]
